--- a/bin/.config
+++ b/bin/.config
@@ -5,6 +5,11 @@ USER=${USER:-root}
 PASS=${PASS}
 DB=${DB:-lifelink}
 
+HOST=sql.life-link.org
+USER=lifelink_basic
+PASS=
+DB=lifelink
+
 TABLES=(
     actions
     actions_has_tags
